2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* PropertyListParser.cs:
	  Solve upstream bug, does not recognize UTF-8 XML with
	  byte-order-mask as XML.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* NSNumber.cs:
	  More culture corrections.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* NSNumber.cs:
	  double.ToString() should be invariantculture also.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* NSSet.cs:
	* NSDate.cs:
	* NSData.cs:
	* NSArray.cs:
	* NSString.cs:
	* NSNumber.cs:
	* NSObject.cs:
	* NSDictionary.cs:
	  Implement correct equality comparisors.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* XmlPropertyListParser.cs:
	  Typo.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* NSNumber.cs:
	  Parse decimal comma always as '.'.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* NSData.cs:
	* NSArray.cs:
	* NSObject.cs:
	* NSDictionary.cs:
	* ASCIIPropertyListParser.cs:
	  Convert unix date to .net dates.
	Array.Equals() does not compare array internals but object
	  reference, implement substitute.
	String.Substring() has a different API than Java, correct.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	* PropertyListParser.cs:
	* XmlPropertyListParser.cs:
	  Implement XmlPropertyListParser

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* NSData.cs:
	* NSDate.cs:
	* NSArray.cs:
	* NSNumber.cs:
	* NSString.cs:
	* NSObject.cs:
	* NSDictionary.cs:
	* plist-cil.csproj:
	* PropertyListParser.cs:
	* BinaryPropertyListWriter.cs:
	  Implement BinaryPropertyListWriter.

	* NSSet.cs:
	* BinaryPropertyListParser.cs:
	  Implement BinaryPropertyListWriter.
	Add way to make ordered NSSet.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* NSDate.cs:
	* NSNumber.cs:
	* plist-cil.csproj:
	* PropertyListParser.cs:
	* BinaryPropertyListParser.cs:
	  Implement BinaryPropertyListParser.

2015-02-19  Natalia Portillo  <claunia@claunia.com>
